--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,25 +1,22 @@
-name: Python Test
+name: Python CI/CD with Docker
 
-on: [push]
+on:
+  push:
+    branches: [ "main" ]
 
 jobs:
-  build:
-    runs-on: ${{ matrix.os }}
-    timeout-minutes: 15
-
-    strategy:
-      matrix:
-        os: [ubuntu-22.04, ubuntu-24.04]
-        python-version: ["3.9", "3.12"]
+  create-docker-image:
+    name: Build and Push Docker Image
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.9" # Puedes ajustar la versión
 
       - name: Install pipx
         run: python -m pip install pipx && python -m pipx ensurepath
@@ -41,3 +38,28 @@ jobs:
 
       - name: Ejecutar pruebas unitarias
         run: poetry run pytest test_main.py
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./dockerfile
+          push: true
+          tags: nach0t/solemne1web:latest
+
+  deploy:
+    name: Deploy Application
+    runs-on: ubuntu-latest
+    needs: create-docker-image
+    steps:
+      - name: Placeholder for Deployment
+        run: echo "Implement your deployment steps here. The Docker image 'nach0t/solemne1web:latest' has been updated."
