--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: "3.9" # Puedes ajustar la versión
+          python-version: "3.12" 
 
       - name: Install pipx
         run: python -m pip install pipx && python -m pipx ensurepath
